--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ authors = ["reujab <reujab@gmail.com>"]
 [dependencies]
 clap = {version = "2.32.0", features = ["yaml"]}
 lazy_static = "1.0.1"
+libc = "0.2.42"
 regex = "1.0.1"
 rust-ini = "0.12.2"
+users = "0.7.0"
