--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["reujab <reujab@gmail.com>"]
 [dependencies]
 clap = {version = "2.32.0", features = ["yaml"]}
 hostname = "0.1.5"
+humantime = "1.1.1"
 lazy_static = "1.0.1"
 libc = "0.2.42"
 regex = "1.0.1"
