--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ authors = ["reujab <reujab@gmail.com>"]
 [dependencies]
 chrono = "0.4.4"
 clap = {version = "2.32.0", features = ["yaml"]}
+git2 = "0.7.2"
 hostname = "0.1.5"
 humantime = "1.1.1"
 lazy_static = "1.0.1"
 libc = "0.2.42"
 regex = "1.0.1"
 rust-ini = "0.12.2"
+url = "1.7.1"
 users = "0.7.0"
