--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["reujab <reujab@gmail.com>"]
 [dependencies]
 chrono = "0.4.4"
 clap = {version = "2.32.0", features = ["yaml"]}
+dirs = "1.0.1"
 git2 = "0.7.2"
 hostname = "0.1.5"
 humantime = "1.1.1"
