--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "Unlicense"
 [dependencies]
 chrono = "0.4.4"
 clap = {version = "2.32.0", features = ["yaml"]}
-dirs = "1.0.1"
+dirs = "2"
 git2 = "0.9.0"
 hostname = "0.1.5"
 humantime = "1.1.1"
@@ -23,7 +23,7 @@ regex = "1.0.1"
 rust-ini = "0.13.0"
 url = "1.7.1"
 
-[target.'!cfg(windows)'.dependencies]
+[target.'cfg(not(windows))'.dependencies]
 users = "0.9.0"
 
 [target.'cfg(windows)'.dependencies.winapi]
