--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ license = "Unlicense"
 
 [dependencies]
 chrono = "0.4"
-clap = {version = "2", features = ["yaml"]}
+clap = "2"
 dirs = "2"
 git2 = "0.9"
 humantime = "1"
