Automatically detect shell
Getting shell from parent process name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ libc = "0.2"
 regex = "1"
 rust-ini = "0.15"
 url = "2"
+sysinfo = "0.15"
 
 [target.'cfg(not(windows))'.dependencies]
 users = "0.10"
