--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,24 @@ license = "Unlicense"
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
 clap = "2"
 dirs = "2"
 git2 = "0.13"
 hostname = "0.3"
 humantime = "2"
-lazy_static = "1"
+once_cell = "1.4"
+lazy_static = "1.4"
 libc = "0.2"
 regex = "1"
 rust-ini = "0.15"
 url = "2"
 sysinfo = "0.15"
+
+[dependencies.confy]
+git = "https://github.com/rust-cli/confy"
 
 [target.'cfg(not(windows))'.dependencies]
 users = "0.10"
