--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ dirs = "2"
 git2 = "0.13"
 hostname = "0.3"
 humantime = "2"
+humantime-serde = "1.0"
 once_cell = "1.4"
 lazy_static = "1.4"
 libc = "0.2"
