--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
 clap = "2"
+structopt = "0.3"
 dirs = "2"
 git2 = "0.13"
 hostname = "0.3"
