--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ edition = "2018"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
-clap = "2"
-structopt = "0.3"
+clap = "3.0.0-beta.2"
 dirs = "2"
 git2 = "0.13"
 hostname = "0.3"
