--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
 clap = "3.0.0-beta.2"
+confy = "0.4"
 dirs = "2"
 git2 = "0.13"
 hostname = "0.3"
@@ -29,9 +30,6 @@ rust-ini = "0.15"
 url = "2"
 shellexpand = "2.0"
 sysinfo = "0.15"
-
-[dependencies.confy]
-git = "https://github.com/rust-cli/confy"
 
 [target.'cfg(not(windows))'.dependencies]
 users = "0.10"
