--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ edition = "2018"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
-clap = "3.0.0-beta.2"
+clap = "=3.0.0-beta.2"
+clap_derive = "=3.0.0-beta.2"
 confy = "0.4"
 dirs = "2"
 git2 = "0.13"
