--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
 clap = "=3.0.0-beta.2"
 clap_derive = "=3.0.0-beta.2"
-confy = { git = "https://github.com/rust-cli/confy", features = [ "yaml_conf" ], default-features = false }
+confy = { git = "https://github.com/rust-cli/confy", features = [ "toml_conf" ] }
 dirs = "2"
 git2 = "0.15"
 hostname = "0.3"
