--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ clap = "=3.0.0-beta.2"
 clap_derive = "=3.0.0-beta.2"
 confy = { git = "https://github.com/rust-cli/confy", features = [ "yaml_conf" ], default-features = false }
 dirs = "2"
-git2 = "0.15"
+git2 = { features=[], default-features=false, version="0.15"}
 hostname = "0.3"
 humantime = "2"
 humantime-serde = "1.0"
