--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,14 @@ edition = "2018"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
-clap = "=3.0.0-beta.2"
-clap_derive = "=3.0.0-beta.2"
+clap = { version = "4.0.32", features = [ "derive" ] }
 confy = { git = "https://github.com/rust-cli/confy", features = [ "yaml_conf" ], default-features = false }
 dirs = "2"
 git2 = { features=[], default-features=false, version="0.15"}
 hostname = "0.3"
 humantime = "2"
 humantime-serde = "1.0"
-once_cell = "1.4"
+once_cell = "1.17.0"
 lazy_static = "1.4"
 libc = "0.2"
 regex = "1"
