--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ humantime-serde = "1.0"
 once_cell = "1.17.0"
 lazy_static = "1.4"
 libc = "0.2"
-regex = "1"
+regex = { version = "1", default-features=false, features=["std", "unicode-perl"] }
 rust-ini = "0.18.0"
 url = "2"
 shellexpand = "2.0"
