--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,10 @@ edition = "2018"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
-clap = "=3.0.0-beta.2"
-clap_derive = "=3.0.0-beta.2"
-confy = { git = "https://github.com/rust-cli/confy", features = [ "yaml_conf" ], default-features = false }
+clap = { version = "3", features = ["derive"] }
+confy = { version = "0.5", features = [ "yaml_conf" ], default-features = false }
 dirs = "2"
-git2 = "0.15"
+git2 = { version = "0.18", default-features = false }
 hostname = "0.3"
 humantime = "2"
 humantime-serde = "1.0"
@@ -27,13 +26,13 @@ once_cell = "1.4"
 lazy_static = "1.4"
 libc = "0.2"
 regex = "1"
-rust-ini = "0.15"
+rust-ini = "0.17"
 url = "2"
 shellexpand = "2.0"
-sysinfo = "0.15"
+sysinfo = "0.23"
 
 [target.'cfg(not(windows))'.dependencies]
-users = "0.10"
+users = { version = "0.11", package = "uzers" }
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3"
